# try_opencv

./: CMakeLists.txt  LICENSE  README.md
ChangeImage/: CMakeLists.txt  main.cpp
DisplayImage/: CMakeLists.txt  main.cpp
